force-app/main/default/objects/OpportunityLineItem/fields/First_Charge_Price__c.field-meta.xml
<CustomField>
    <fullName>First_Charge_Price__c</fullName>
    <label>First Charge Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>