force-app/main/default/objects/OpportunityLineItem/fields/Installment_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Installment_Payment_Schedule__c</fullName>
    <label>Installment Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-Pay</fullName>
            </value>
            <value>
                <fullName>3-Pay</fullName>
            </value>
            <value>
                <fullName>4-Pay</fullName>
            </value>
            <value>
                <fullName>6-Pay</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>