force-app/main/default/objects/OpportunityLineItem/fields/Payment_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cycle__c</fullName>
    <label>Payment Cycle</label>
    <length>32</length>
    <type>Text</type>
</CustomField>